--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.15.4",
     "express-session": "^1.15.5",
     "morgan": "^1.8.2",
+    "node-geocoder": "^3.21.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.3.0",
