--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "passport-local": "^1.0.0",
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
+    "pg-search-sequelize": "0.0.10",
     "sequelize": "^4.8.0"
   }
 }
