--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "errorhandler": "^1.5.0",
     "express": "^4.15.4",
     "express-session": "^1.15.5",
+    "infusionsoft-api": "^0.6.0",
     "morgan": "^1.8.2",
     "node-geocoder": "^3.21.0",
     "passport": "^0.4.0",
