--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "errorhandler": "^1.5.0",
     "express": "^4.15.4",
     "express-session": "^1.15.5",
+    "forever-monitor": "^1.7.1",
     "infusionsoft-api": "^0.6.0",
     "morgan": "^1.8.2",
     "node-geocoder": "^3.21.0",
@@ -41,6 +42,7 @@
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
     "pg-search-sequelize": "0.0.10",
-    "sequelize": "^4.8.0"
+    "sequelize": "^4.8.0",
+    "stripe": "^5.3.0"
   }
 }
