--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "pg-hstore": "^2.3.2",
     "pg-search-sequelize": "0.0.10",
     "sequelize": "^4.8.0",
+    "stringify-object": "^3.2.1",
     "stripe": "^5.3.0"
   }
 }
