--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
     "pg-search-sequelize": "0.0.10",
+    "rollbar": "^2.3.9",
     "sequelize": "^4.8.0",
     "stringify-object": "^3.2.1",
     "stripe": "^5.3.0"
