--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.229.1",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
@@ -36,6 +37,8 @@
     "forever-monitor": "^1.7.1",
     "infusionsoft-api": "^0.6.0",
     "morgan": "^1.8.2",
+    "multer": "^1.3.0",
+    "multer-s3": "^2.7.0",
     "node-geocoder": "^3.21.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
@@ -45,6 +48,7 @@
     "rollbar": "^2.3.9",
     "sequelize": "^4.8.0",
     "stringify-object": "^3.2.1",
-    "stripe": "^5.3.0"
+    "stripe": "^5.3.0",
+    "uuid": "^3.2.1"
   }
 }
